# relaix

./: .gitignore  LICENSE  README.md  alembic.ini  example-api.conf  pyproject.toml
src/relaix/: __main__.py  api.py  collector.py  conf.py  db.py  domain.py  executor.py  http_server.py  matching.py  migrations.py  repository.py  version.py
src/relaix/alembic/: env.py
src/relaix/alembic/versions/: a1b2c3d4e5f6_initial_schema.py  b2c3d4e5f6a7_add_max_content_attempts.py
src/relaix/cli/: _common.py  collect.py  execute.py  migrate.py  provision_db.py  serve.py
src/relaix/static/: history.html  index.html  rules.html
tests/: conftest.py  test_collector.py  test_executor.py  test_http_server.py  test_matching.py  test_repository.py
